--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
 
 
-    
+
     <header id="nav-bar">
         <div class="titlu">
             <a href="#acasa" class="titlu-inchirieri">Inchirieri Panouri</a>
@@ -64,7 +64,7 @@
 
     <div class="section-details" id="despre-noi">
         <div class="details">
-            <div class="title">Bine ati venit pe site-ul Doka!</div>
+            <div class="title">Despre Noi</div>
             <div class="details-company">
                 <div class="description">Cu o experienta de peste 20 de ani in domeniul constructiilor, firma noastra s-a axat pe inchirierea de panouri Doka second hand sau noi, de cea mai buna calitate, la cele mai bune preturi. Este important pentru noi ca fiecare client in parte sa isi poata finaliza lucrarea in cele mai bune conditii. Va stam la dispozitie pe toata perioada inchirierii cu tot suportul de care aveti nevoie, deoarece ne pasa de oamenii care aleg serviciile noastre.</div>
                 <div class="description">Va oferim solutii de cofrare pentru <span>domeniile de constructii </span> – indiferent daca este vorba despre zone rezidentiale, constructia de drumuri, extinderea retelei de energie sau despre construirea celei mai inalte cladiri din lume. Pentru fiecare proiect de constructie si fiecare cerinta puteti alege, sistemele si elementele de cofrare. Structurate dupa un concept modular, acestea sunt perfect compatibile intre ele si astfel economisiti materiale, timp si costuri pe santier. Pe langa valoarea adaugata, acest lucru va asigura avantaje hotaratoare – Pur si simplu cu un pas inainte.</div>
