--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <script src="JavaScript.js"></script>
+    <link rel="shortcut icon" type="circle-icon" href="Image/Icon-1.png">
     <title>Inchirieri-Doka Bihor</title>
 </head>
 
